--- a/.github/workflows/provision_ec2.yml
+++ b/.github/workflows/provision_ec2.yml
@@ -30,7 +30,7 @@ jobs:
         env:
           TF_VAR_ec2_name:  "${{ github.event.inputs.ec2-name }}"
         run: |
-          cd tf-example/
+          cd code/Terraform/cloudsecITM/
           terraform init
           terraform validate
           terraform plan 
